# 3DRenderer

./: .gitignore  CMakeLists.txt
ext/glad/: glad.c  glad.h
inc/: Application.hpp  Camera.hpp  Event.hpp  OBJ_Loader.h  Object.hpp  Renderer.hpp  Shader.hpp  Window.hpp
res/models/ferris/: ferris3d_v1.0.mtl
res/shaders/: fragment.glsl  vertex.glsl
src/: Application.cpp  Camera.cpp  Object.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
